--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "*",
-    "http-proxy": "*",
-    "body-parser": "*",
-    "chrome-remote-interface": "*",
+    "coffee-script": "*",
+    "lodash": "*",
     "ws": "*",
     "open": "*"
   }
